tests/NormalTests/paczka1/small_fuzzy/97538606.err
Error in line 1: uXH712NeW S920 47,0
Error in line 10: ocYgmJc S638 -2,5
Error in line 8: 6CvWvrZB A490 72,6
Error in line 5: 5siu6k5 S638 70,2
